# cli

./: .eslintrc.cjs  CMakeLists.txt  README.md  dprint.json  eslint.config.mjs  info.hpp.in  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.linux.yml  build.windows.yml  publish.yml
include/: ansi.hpp  cli.hpp  embed.hpp  item.hpp  item.inl  menu.hpp  mimes.hpp  regex_item.hpp  regex_item.inl
src/: cli.cpp  cli.ts  embed.cpp  embed.tsx  file.ts  index.ts  item.cpp  main.cpp  menu.cpp  regex_item.cpp
src/commands/: embed.ts  embed.tsx  start.ts
src/components/: error.tsx  line.tsx  table.tsx
src/templates/: all.eta  embed.eta
src/theme/: index.ts
src/utils/: colors.ts  expected.ts  fs.ts
templates/: CmakeLists.template.hpp  main.template.hpp
